--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <title>Cat Clicker</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     <div id="cat-container">
-      <div id="cat-list"></div>
-      <div id="cat-display"></div>
+      <div id="cat-list">
+          <ul>
+              <li>Jin</li>
+          </ul>
+      </div>
+      <div id="cat-display">
+          <p>name</p>
+          <p>clicks</p>
+          <img src="https://lh3.ggpht.com/kixazxoJ2ufl3ACj2I85Xsy-Rfog97BM75ZiLaX02KgeYramAEqlEHqPC3rKqdQj4C1VFnXXryadFs1J9A=s0#w=640&h=496" />
+      </div>
     </div>
-
-
-    <script src="js/libs/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-
 </body>
 </html>
