--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 </head>
 <body>
     <div id="cat-container">
-      <div id="cat-list">
-          <ul>
-              <li>Jin</li>
-          </ul>
+      <div class="list-container">
+          <ul id="cat-list"></ul>
       </div>
-      <div id="cat-display">
-          <p>name</p>
-          <p>clicks</p>
-          <img src="https://lh3.ggpht.com/kixazxoJ2ufl3ACj2I85Xsy-Rfog97BM75ZiLaX02KgeYramAEqlEHqPC3rKqdQj4C1VFnXXryadFs1J9A=s0#w=640&h=496" />
-      </div>
+      <div class="display-container"></div>
     </div>
 </body>
 </html>
